GNOME Bugzilla – Bug 698224
[osxaudio] caps negotiation fails due to invalid channel-mask
Last modified: 2013-04-18 07:16:52 UTC
:00:00.923417000 52910 0x7fc0c1884b70 ERROR default audio-channels.c:355:gst_audio_channel_positions_from_mask: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:00.923511000 52910 0x7fc0c1884b70 ERROR default audio-info.c:284:gst_audio_info_from_caps: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:00.923887000 52910 0x7fc0c1884b70 ERROR audioconvert gstaudioconvert.c:757:gst_audio_convert_set_caps:<conv> invalid output caps 0:00:00.990384000 52910 0x7fc0c1884b70 ERROR default audio-channels.c:355:gst_audio_channel_positions_from_mask: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:00.990442000 52910 0x7fc0c1884b70 ERROR default audio-info.c:284:gst_audio_info_from_caps: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:00.990543000 52910 0x7fc0c1884b70 ERROR audioconvert gstaudioconvert.c:757:gst_audio_convert_set_caps:<conv> invalid output caps 0:00:01.061376000 52910 0x7fc0c1884b70 ERROR default audio-channels.c:355:gst_audio_channel_positions_from_mask: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.061435000 52910 0x7fc0c1884b70 ERROR default audio-info.c:284:gst_audio_info_from_caps: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.061533000 52910 0x7fc0c1884b70 ERROR audioconvert gstaudioconvert.c:757:gst_audio_convert_set_caps:<conv> invalid output caps 0:00:01.140254000 52910 0x7fc0c1884b70 ERROR default audio-channels.c:355:gst_audio_channel_positions_from_mask: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.140280000 52910 0x7fc0c1884b70 ERROR default audio-info.c:284:gst_audio_info_from_caps: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.140292000 52910 0x7fc0c1884b70 ERROR audioconvert gstaudioconvert.c:757:gst_audio_convert_set_caps:<conv> invalid output caps 0:00:01.172624000 52910 0x7fc0c1884b70 ERROR default audio-channels.c:355:gst_audio_channel_positions_from_mask: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.172652000 52910 0x7fc0c1884b70 ERROR default audio-info.c:284:gst_audio_info_from_caps: Invalid channel mask 0x0000000200000002 for 2 channels 0:00:01.172694000 52910 0x7fc0c1884b70 ERROR audioconvert gstaudioconvert.c:757:gst_audio_convert_set_caps:<conv> invalid output caps ERROR: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstQTDemux:qtdemux0: GStreamer encountered a general stream error. Additional debug info: qtdemux.c(4035): gst_qtdemux_loop (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstQTDemux:qtdemux0: streaming stopped, reason not-negotiated ERROR: pipeline doesn't want to preroll.
0x0000000200000002 doesn't seem like a correct bitmask for a stereo audio indeed :)
Created attachment 241768 [details] [review] proposed patch I'm not sure about the code path where the number of channels is resetted from the for loop. I usually don't modify the exit condition like that. But anyway the sink works here with that patch.
commit d352201a34bcbd7e838fc45ee7c3bda7864bc2a6 Author: Philippe Normand <philn@igalia.com> Date: Wed Apr 17 21:05:14 2013 +0200 osxaudiosink: channel-mask configuration fixes Set channel-mask according to sink's layout in case of stereo layout. Also initialize and reset the mask when an unrecognized channel is detected. https://bugzilla.gnome.org/show_bug.cgi?id=698224